--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# editors and others
+.vscode
+.DS_Store
+
+# test files/ resources (only local copies like test credentials)
+test/creds
+local/creds
+
+
